# pylib

./: .gitignore  CLAUDE.md  PRD.md  README.md  config.yaml  dev-cmd.bat  main.py  pyproject.toml  pyproject2.toml  tasks.md
data/corpus1/: Niven, Larry - In The Cellar.txt  Niven, Larry - In The Cellar.txt.cleaned  Niven, Larry - Unfinished Story.doc.cleaned  Robert J. Sawyer - Good Doctor.pdf.cleaned  some_markdown.md.cleaned
data/corpus2/: Niven, Larry - Unfinished Story.doc  Robert J. Sawyer - Good Doctor.pdf.cleaned
data/test/: a.yaml  b.yaml  c.yaml
docs/: requirements.md  workflow.md
src/: main.py
src/cli/: convert.py
src/examples/: docx2md.py
src/lib/: book.py  configurations.py  corpus.py  fileconvert.py  modelstack.py  pdfs.py  querydw.py  rag.py  rerankers.py  splitter.py  tools.py  vectordb.py  vectordb_chroma.py  vectordb_common.py  vectordb_numpy.py  workflow.py
src/lib/ai/: configurations.py  corpus.py  fileconvert.py  llamaindex.py  modelstack.py  orchestration.py  rag.py  raptor.py  rerankerlib.py  rerankers1.py  vectordb.py  vectordb_chroma.py  vectordb_common.py  vectordb_numpy.py  workflow.py
src/lib/database/: databases.py  migrations.py
src/lib/jupyter/: test.py
src/lib/llama/: README.md  orchestration.py
src/lib/workflow/: engine.py
storage/chroma/: chroma.sqlite3
storage/chroma/llamaindex_test/: chroma.sqlite3
storage/raptor/: default__vector_store.json  docstore.json  index_store.json
storage/raptor/chroma_test/: default__vector_store.json  docstore.json  index_store.json
tests/data/configs/: config1.yaml  tables1.yaml
tests/data/corpus1/: Dungeons and Dragons - 5e -Spell List.docx.cleaned  Rand, Ayn - ATLAS SHRUGGED.txt.cleaned  Rand, Ayn - Fountainhead.txt.cleaned  Tolkien, J R R - The Hobbit.doc.cleaned  mellville-mobydick.pdf.cleaned  (+1 more)
tests/vectordb/: test_vectordb_chroma.py
(+17 files in other folders)
